# barrins-codex

./: .gitignore  .markdownlint.json  CHANGELOG.rst  HOWTO_RELEASE.md  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: static.yml
barrins_codex/: Makefile  __init__.py  build_deck.py  build_library.py  card.py  card_list.py  config.py  json_to_txt.py  moxfield.py  moxfield_decklist.py  navigation.py
barrins_codex/static/: robots.txt  sitemap.xml
barrins_codex/static/css/: article_element.css  base.css  base_new.css  body.css  body_season_1.css  body_season_2.css  dark-theme.css  dropdown_menu.css  fonts.css  footer.css  header.css  light-theme.css  nightmode.css
barrins_codex/static/js/: barrins-codex.js  card.js  card_image.js  dC.js  decklist.js  dropdown_menu.js  statistics.js  svg_handler.js  toc.js
barrins_codex/static/json/: cardlist.txt
barrins_codex/templates/: 404.html  _appel.html  commanders_data.html  index.html  layout.html  layout_bootstrap.html  match_carousel.html
barrins_codex/templates/archetypes/: _layout.html  _layout_card_column.html  _layout_wip.html  adeliz-the-cinder-wind.html  adeliz-the-cinder-wind.json  aminatou-the-fateshifter.html  aminatou-the-fateshifter.json  arcades-the-strategist.html  arcades-the-strategist.json  doran-the-siege-tower.html  doran-the-siege-tower.json  galazeth-prismari.html  galazeth-prismari.json  golos-tireless-pilgrim.html  golos-tireless-pilgrim.json  grenzo-dungeon-warden.html  grenzo-dungeon-warden.json  hogaak-arisen-necropolis.html  hogaak-arisen-necropolis.json  index.html  isamaru-hound-of-konda.html  isamaru-hound-of-konda.json  kelsien-the-plague.html  kelsien-the-plague.json  kess-dissident-mage.html  kess-dissident-mage.json  kess-section-retiree.html  kinnan-bonder-prodigy.html  kinnan-bonder-prodigy.json  magda-brazen-outlaw.html  magda-brazen-outlaw.json  miara-tevesh.html  miara-tevesh.json  minsc-beloved-ranger.html  minsc-beloved-ranger.json  niv-mizzet-reborn.html  niv-mizzet-reborn.json  octavia-living-thesis.html  octavia-living-thesis.json  orvar-the-allform.html  (+13 more)
barrins_codex/templates/articles/: _contributors.html  _layout_articles.html  classifier-un-deck.html  construire-un-deck.html  index.html  lart-de-bien-melanger-un-deck.html  lart-de-classifier-les-decks.html  melanger-un-deck.html
barrins_codex/templates/cartes-cle/: _layout.html  _layout_card_column.html  index.html
barrins_codex/templates/cartes-thematiques/: _layout_card_column.html  _layout_card_display.html  _layout_wip.html  index.html  les-mass-removals.html  les-piocheurs.html  les-spot-removals.html
barrins_codex/templates/contributions/: index.html
barrins_codex/templates/decks/: _layout_decks.html  _macro_decks.html  adeliz-the-cinder-wind.html  aminatou-the-fateshifter.html  azusa-lost-but-seeking.html  bjornawernog.html  cecilywernog.html  dennick-pious-apprentice.html  doran-the-siege-tower.html  dragonlord-ojutai.html  elmarhargilde.html  elmarsophina.html  elminster.html  erinis-gloom-stalker.html  esika-god-of-the-tree.html  ghyrson-starn-kelermorph.html  grenzo-dungeon-warden-article.html  grenzo-dungeon-warden.html  grist-the-hunger-tide.html  gut-true-soul-zealot.html  hinata-dawncrowned.html  hogaak-arisen-necropolis.html  index.html  isamaru-hound-of-konda.html  ishaitevesh.html  jori-en-ruin-diver.html  juri-master-of-the-revue.html  kari-zev-skyship-raider.html  karlov-of-the-ghost-council.html  killian-ink-duelist.html  kinnan-bonder-prodigy.html  klothys-god-of-destiny.html  kroxa-titan-of-deaths-hunger.html  leovold-emissary-of-trest.html  lightpaws-emperors-voice.html  liviomalcolm.html  livioprava.html  maelstrom-wanderer.html  marath-will-of-the-wild.html  miaratevesh.html  (+21 more)
barrins_codex/templates/matchs/: 1-adeliz-vs-kinnan.html  10-kari-zev-vs-marath.html  11-doran-vs-marchesa.html  12-light-paws-vs-ishaitevesh.html  13-bjornawernog-vs-grist.html  14-minsc-vs-shorikai.html  15-dennick-vs-hinata.html  16-aminatou-vs-tiamat.html  17-grist-vs-sythis.html  18-kari-zev-vs-killian-budget.html  19-elmarsophina-vs-shorikai.html  2-kari-zev-vs-saskia.html  20-juri-vs-sai.html  (+46 more)
tests/: conftest.py  test_pages.py
(+105 files in other folders)
