[metadata]
name = barrins_codex
version = 2.2.1.dev0
author = mcuchet
author_email = martin.cuchet@gmail.com
url = https://github.com/Spigushe/barrins-codex
description="A website about MtG Duel Strategy",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = mtg strategy duel-commander edh commander
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Other Audience
	Natural Language :: French
	Operating System :: OS Independent
	Environment :: Console
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
	babel
	setuptools
install_requires =
	flask
	flask-babel
	requests
	unidecode
	werkzeug==0.16.0

[options.entry_points]
console_scripts =
	codex=barrins_codex:main

[options.extras_require]
dev =
	black
	doc8
	flake8
	ipython
	uwsgi
	zest.releaser[recommended]

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[extract_messages]
keywords = lazy_gettext
charset = utf-8
add-comments = TRANSLATORS:
width = 120
mapping-file = babel.cfg
input-dirs = barrins_codex
output-file = messages.pot

[update_catalog]
width = 120
input-file = messages.pot
output-dir = barrins_codex/translations

[compile_catalog]
domain = messages
directory = barrins_codex/translations

[zest.releaser]
create-wheel = yes
