[metadata]
name = barrins_codex
version = 6.29.3.dev0
author = mcuchet
author_email = martin.cuchet@gmail.com
url = https://github.com/Spigushe/barrins-codex
description="A Collection of Duel Commander commented games in French",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = mtg strategy duel-commander edh commander
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    Natural Language :: French
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    flask
    unidecode
    requests

[options.entry_points]
console_scripts =
    codex=barrins_codex:main

[options.extras_require]
dev =
    black
    clipboard
    flake8
    ipython
    pytest
    zest.releaser[recommended]

[flake8]
max-line-length = 88
exclude = build, dist, .eggs
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
version-levels = 2
